--- a/src/components/MultiStepIndicator/__stories__/multiStepIndicator.stories.mdx
+++ b/src/components/MultiStepIndicator/__stories__/multiStepIndicator.stories.mdx
@@ -3,10 +3,12 @@ import { useCallback, useEffect, useMemo, useState } from "react";
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import { STEP_STATUSES } from "../MultiStepConstants";
 import { createComponentTemplate } from "../../../storybook/functions/createComponentTemplate";
+import { StoryDescription } from "../../../storybook/components/story-description/story-description";
 import { BREADCRUBMS, STEPPER, TABS } from "../../../storybook/components/related-components/component-description-map";
 import { firstSteps, secondSteps, thirdSteps } from "./helper.js";
 import { Link } from "../../../storybook/components";
 import { Featured } from "../../Icon/Icons";
+import Flex from "../../Flex/Flex";
 import "./multiStepIndicator.stories.scss";
 
 <Meta title="Navigation/Wizard" component={MultiStepIndicator} />
@@ -189,6 +191,54 @@ There are 4 types: Primary, success, danger, dark.
             <MultiStepIndicator steps={steps} type={MultiStepIndicator.types.DARK} />
           </div>
         </div>
+      );
+    }}
+  </Story>
+</Canvas>
+
+### Sizes
+
+Compact is a smaller version of the Regular Wizard Stepper, and is suitable for smaller containers. In case you need to display more content, use the Regular size. As of now, vertical placement is not supported.
+
+<Canvas>
+  <Story name="Sizes">
+    {() => {
+      const steps = useMemo(
+        () => [
+          {
+            key: "FULFILLED",
+            status: MultiStepIndicator.stepStatuses.FULFILLED,
+            titleText: "Fulfilled title",
+            subtitleText: "Fulfilled subtitle"
+          },
+          {
+            key: "ACTIVE",
+            status: MultiStepIndicator.stepStatuses.ACTIVE,
+            titleText: "Active title",
+            subtitleText: "Active subtitle"
+          },
+          {
+            key: "PENDING",
+            status: MultiStepIndicator.stepStatuses.PENDING,
+            titleText: "Pending",
+            subtitleText: "Pending subtitle"
+          }
+        ],
+        []
+      );
+      return (
+        <Flex direction={Flex.directions.COLUMN} align={Flex.align.START} gap={Flex.gaps.SMALL}>
+          <StoryDescription description="Regular">
+            <MultiStepIndicator steps={steps} size={MultiStepIndicator.sizes.REGULAR} />
+          </StoryDescription>
+          <StoryDescription description="Compact">
+            <MultiStepIndicator
+              className="multi_step_indicator_compact"
+              steps={steps}
+              size={MultiStepIndicator.sizes.COMPACT}
+            />
+          </StoryDescription>
+        </Flex>
       );
     }}
   </Story>
