--- a/src/components/Text/__stories__/Text.stories.mdx
+++ b/src/components/Text/__stories__/Text.stories.mdx
@@ -2,6 +2,7 @@ import Text from "../Text";
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
 import { createComponentTemplate, createStoryMetaSettings } from "../../../storybook";
 import styles from "./Text.stories.module.scss";
+import Flex from "../../Flex/Flex";
 
 export const metaSettings = createStoryMetaSettings({
   component: Text,
@@ -76,6 +77,29 @@ The text component serves as a wrapper for applying typography styles to the tex
   <Story name="Colors">
     <Text color={Text.colors.PRIMARY}>Primary text</Text>
     <Text color={Text.colors.SECONDARY}>Secondary text</Text>
+  </Story>
+</Canvas>
+
+### Overflow
+
+Our Text component support overflow state.
+When the text is too long and the component includes an ellipsis flag, we will cut the end of the heading and display instead of it "...".
+
+<Canvas>
+  <Story name="Overflow">
+    <Flex direction={Flex.directions.COLUMN} gap={Flex.gaps.MEDIUM} align={Flex.align.STRETCH} style={{ width: "70%" }}>
+      <Text ellipsis={false}>Text without overflow text without overflow text without overflow</Text>
+      <Text ellipsis>
+        Text with overflow text with overflow text with overflow text with overflow text with overflow
+      </Text>
+      <div>
+        <Text ellipsis maxLines={2}>
+          Text with overflow text with overflow text with overflow text with overflow text with overflow Text with
+          overflow text with overflow text with overflow text with overflow text with overflow Text with overflow text
+          with overflow text with overflow text with overflow text with overflow
+        </Text>
+      </div>
+    </Flex>
   </Story>
 </Canvas>
 
