add tooltip support

--- a/src/components/Text/__stories__/Text.stories.mdx
+++ b/src/components/Text/__stories__/Text.stories.mdx
@@ -99,6 +99,14 @@ When the text is too long and the component includes an ellipsis flag, we will c
           with overflow text with overflow text with overflow text with overflow
         </Text>
       </div>
+      <div>
+        <Text ellipsis withoutTooltip maxLines={2}>
+          Text with overflow without tooltip text with overflow without tooltip text with overflow without tooltip text
+          with overflow without tooltip text with overflow without tooltip text with overflow without tooltip text with
+          overflow without tooltip text with overflow without tooltip text with overflow without tooltip text with
+          overflow without tooltip
+        </Text>
+      </div>
     </Flex>
   </Story>
 </Canvas>
