--- a/src/components/Text/__stories__/Text.stories.mdx
+++ b/src/components/Text/__stories__/Text.stories.mdx
@@ -1,8 +1,9 @@
 import Text from "../Text";
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
-import { createComponentTemplate, createStoryMetaSettings } from "../../../storybook";
+import { createComponentTemplate, createStoryMetaSettings, Tip } from "../../../storybook";
 import styles from "./Text.stories.module.scss";
 import Flex from "../../Flex/Flex";
+import AttentionBox from "../../AttentionBox/AttentionBox";
 
 export const metaSettings = createStoryMetaSettings({
   component: Text,
@@ -11,15 +12,20 @@ export const metaSettings = createStoryMetaSettings({
   actionPropsArray: [] // List the component's actions here
 });
 
-<Meta title="Text/Text" component={Text} argTypes={metaSettings.argTypes} decorators={metaSettings.decorators} />
+<Meta title="Text/Text 🚧" component={Text} argTypes={metaSettings.argTypes} decorators={metaSettings.decorators} />
 
 <!--- Component template -->
 
 export const textTemplate = createComponentTemplate(Text);
 
+# Text
+
 <!--- Component documentation -->
 
-# Text
+<Tip emoji="🚧" title="Alpha component" type={AttentionBox.types.WARNING}>
+  This component is currently being developed and is ready for exploratory usage. Please note that there may be breaking
+  changes in future minor version updates and use with caution.
+</Tip>
 
 - [Overview](#overview)
 - [Props](#props)
