Text component wip

--- a/src/storybook/stand-alone-documentaion/typography-new/typography.stories.mdx
+++ b/src/storybook/stand-alone-documentaion/typography-new/typography.stories.mdx
@@ -3,7 +3,7 @@ import { ComponentName, Frame, Link, RelatedComponents } from "../../components"
 import { TextColors } from "../../components/text-colors/text-colors";
 import { TextStyles } from "./text-styles/text-styles";
 import { COLORS, SHADOW, SPACING } from "../../components/related-components/component-description-map";
-import { typographyExample1, typographyExample2 } from "../typography/assets";
+import { typographyExample1, typographyExample2 } from "./assets";
 import "./typography.scss";
 
 <Meta title="Foundations/Typography2" />
