--- a/src/components/Text/__stories__/Text.stories.mdx
+++ b/src/components/Text/__stories__/Text.stories.mdx
@@ -1,18 +1,19 @@
 import Text from "../Text";
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
 import { createComponentTemplate, createStoryMetaSettings, Tip } from "../../../storybook";
-import styles from "./Text.stories.module.scss";
+import { Link as StorybookLink } from "../../../storybook";
 import Flex from "../../Flex/Flex";
-import AttentionBox from "../../AttentionBox/AttentionBox";
+
+import styles from "./Text.stories.module.scss";
 
 export const metaSettings = createStoryMetaSettings({
   component: Text,
-  enumPropNamesArray: ["sizes", "weights", "colors"], // List enum props here
+  enumPropNamesArray: ["sizes", "weights", "colors", { propName: "align", enumName: "align" }], // List enum props here
   iconPropNamesArray: [], // List props that are typed as icons here
   actionPropsArray: [] // List the component's actions here
 });
 
-<Meta title="Text/Text 🚧" component={Text} argTypes={metaSettings.argTypes} decorators={metaSettings.decorators} />
+<Meta title="Text/Text" component={Text} argTypes={metaSettings.argTypes} decorators={metaSettings.decorators} />
 
 <!--- Component template -->
 
@@ -21,11 +22,6 @@ export const textTemplate = createComponentTemplate(Text);
 # Text
 
 <!--- Component documentation -->
-
-<Tip emoji="🚧" title="Alpha component" type={AttentionBox.types.WARNING}>
-  This component is currently being developed and is ready for exploratory usage. Please note that there may be breaking
-  changes in future minor version updates and use with caution.
-</Tip>
 
 - [Overview](#overview)
 - [Props](#props)
@@ -62,18 +58,25 @@ The text component serves as a wrapper for applying typography styles to the tex
 
 <Canvas>
   <Story name="Sizes and weights">
-    <Text size={Text.sizes.MEDIUM} weight={Text.weights.BOLD}>
-      Bold medium size
-    </Text>
-    <Text size={Text.sizes.MEDIUM} weight={Text.weights.NORMAL}>
-      Normal medium size
-    </Text>
-    <Text size={Text.sizes.SMALL} weight={Text.weights.BOLD}>
-      Bold small size
-    </Text>
-    <Text size={Text.sizes.MEDIUM} weight={Text.weights.NORMAL}>
-      Normal small size
-    </Text>
+    <Flex
+      gap={Flex.gaps.SMALL}
+      direction={Flex.directions.COLUMN}
+      justify={Flex.justify.START}
+      align={Flex.align.START}
+    >
+      <Text size={Text.sizes.MEDIUM} weight={Text.weights.BOLD}>
+        Bold medium size
+      </Text>
+      <Text size={Text.sizes.MEDIUM} weight={Text.weights.NORMAL}>
+        Normal medium size
+      </Text>
+      <Text size={Text.sizes.SMALL} weight={Text.weights.BOLD}>
+        Bold small size
+      </Text>
+      <Text size={Text.sizes.SMALL} weight={Text.weights.NORMAL}>
+        Normal small size
+      </Text>
+    </Flex>
   </Story>
 </Canvas>
 
@@ -81,8 +84,21 @@ The text component serves as a wrapper for applying typography styles to the tex
 
 <Canvas>
   <Story name="Colors">
-    <Text color={Text.colors.PRIMARY}>Primary text</Text>
-    <Text color={Text.colors.SECONDARY}>Secondary text</Text>
+    <Flex direction={Flex.directions.COLUMN} align={Flex.align.START} gap={Flex.gaps.SMALL}>
+      <Text color={Text.colors.PRIMARY}>Primary text</Text>
+      <Text color={Text.colors.SECONDARY}>Secondary text</Text>
+      <Text element="div" className={styles.primaryBackground} align={Text.align.CENTER} color={Text.colors.ON_PRIMARY}>
+        On primary text
+      </Text>
+      <Text
+        element="div"
+        className={styles.invertedBackground}
+        align={Text.align.CENTER}
+        color={Text.colors.ON_INVERTED}
+      >
+        On inverted text
+      </Text>
+    </Flex>
   </Story>
 </Canvas>
 
@@ -94,19 +110,15 @@ When the text is too long and the component includes an ellipsis flag, we will c
 <Canvas>
   <Story name="Overflow">
     <Flex direction={Flex.directions.COLUMN} gap={Flex.gaps.MEDIUM} align={Flex.align.STRETCH} style={{ width: "70%" }}>
-      <Text ellipsis={false}>Text without overflow text without overflow text without overflow</Text>
-      <Text ellipsis>
+      <Text size={Text.sizes.SMALL} ellipsis={false}>
+        Text without overflow text without overflow text without overflow text without overflow text without overflow
+        text without overflow text without overflow
+      </Text>
+      <Text size={Text.sizes.SMALL} ellipsis>
         Text with overflow text with overflow text with overflow text with overflow text with overflow
       </Text>
       <div>
-        <Text ellipsis maxLines={2}>
-          Text with overflow text with overflow text with overflow text with overflow text with overflow Text with
-          overflow text with overflow text with overflow text with overflow text with overflow Text with overflow text
-          with overflow text with overflow text with overflow text with overflow
-        </Text>
-      </div>
-      <div>
-        <Text ellipsis withoutTooltip maxLines={2}>
+        <Text size={Text.sizes.SMALL} ellipsis withoutTooltip maxLines={2}>
           Text with overflow without tooltip text with overflow without tooltip text with overflow without tooltip text
           with overflow without tooltip text with overflow without tooltip text with overflow without tooltip text with
           overflow without tooltip text with overflow without tooltip text with overflow without tooltip text with
@@ -117,63 +129,18 @@ When the text is too long and the component includes an ellipsis flag, we will c
   </Story>
 </Canvas>
 
-## Do’s and Don’ts
+### Links inside running text
 
-<ComponentRules
-  rules={[
-    {
-      positive: {
-        component: <Text />,
-        description: "Best practice description."
-      },
-      negative: {
-        component: <Text />,
-        description: "Bad practice description."
-      }
-    },
-    {
-      positive: {
-        component: <Text />,
-        description: "Best practice description."
-      },
-      negative: {
-        component: <Text />,
-        description: "Bad practice description."
-      }
-    },
-    {
-      positive: {
-        component: <Text />,
-        description: "Best practice description."
-      },
-      negative: {
-        component: <Text />,
-        description: "Bad practice description."
-      }
-    },
-    {
-      positive: {
-        component: <Text />,
-        description: "Best practice description."
-      },
-      negative: {
-        component: <Text />,
-        description: "Bad practice description."
-      }
-    }
-  ]}
-/>
+We distinguish between two types of links: links within running text and links that are not part of the textual flow, such as those found in menus or next to buttons.
 
-## Use cases and examples
-
-### Story title 3
-
-Description of story 3
+If you need to place a link outside of the textual flow, please use our <StorybookLink href="/?path=/docs/navigation-link--overview" withoutSpacing>Link</StorybookLink> component.
+Otherwise, use this Text component with a link skin, as demonstrated in the following example.
 
 <Canvas>
-  <Story name="Story title 3">
-    <Text />
-    <Text />
+  <Story name="Links inside running text">
+    <Text>
+      This is the story of a <a href="/?path=/docs/foundations-typography--page">link</a> inside running text.
+    </Text>
   </Story>
 </Canvas>
 
