--- a/src/storybook/stand-alone-documentaion/typography/typography.stories.mdx
+++ b/src/storybook/stand-alone-documentaion/typography/typography.stories.mdx
@@ -6,7 +6,7 @@ import { COLORS, SHADOW, SPACING } from "../../components/related-components/com
 import { typographyExample1, typographyExample2 } from "./assets";
 import "./typography.scss";
 
-<Meta title="Foundations/Typography2" />
+<Meta title="Foundations/Typography" />
 
 <!--- Component documentation -->
 
