--- a/src/storybook/stand-alone-documentaion/typography/typography.stories.mdx
+++ b/src/storybook/stand-alone-documentaion/typography/typography.stories.mdx
@@ -10,7 +10,7 @@ import "./typography.scss";
 
 <!--- Component documentation -->
 
-<ComponentName withFoundationBackground>Typography2</ComponentName>
+<ComponentName withFoundationBackground>Typography</ComponentName>
 
 - [Overview](#overview)
 - [Text styles](#text-styles)
