--- a/src/storybook/stand-alone-documentaion/typography/typography.stories.mdx
+++ b/src/storybook/stand-alone-documentaion/typography/typography.stories.mdx
@@ -4,6 +4,7 @@ import { TextColors } from "../../components/text-colors/text-colors";
 import { TextStyles } from "./text-styles/text-styles";
 import { COLORS, SHADOW, SPACING } from "../../components/related-components/component-description-map";
 import { typographyExample1, typographyExample2 } from "./assets";
+import { AlphaWarning } from "../../components/alpha-warning/alpha-warning";
 import "./typography.scss";
 
 <Meta title="Foundations/Typography" />
@@ -11,6 +12,8 @@ import "./typography.scss";
 <!--- Component documentation -->
 
 <ComponentName withFoundationBackground>Typography</ComponentName>
+
+<AlphaWarning />
 
 - [Overview](#overview)
 - [Text styles](#text-styles)
