--- a/src/components/Text/__stories__/Text.stories.mdx
+++ b/src/components/Text/__stories__/Text.stories.mdx
@@ -3,9 +3,11 @@ import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
 import { createComponentTemplate, createStoryMetaSettings, Tip } from "../../../storybook";
 import { Link as StorybookLink } from "../../../storybook";
 import Flex from "../../Flex/Flex";
-
-import styles from "./Text.stories.module.scss";
 import { AlphaWarning } from "../../../storybook/components/alpha-warning/alpha-warning";
+import { ONE_LINE_ELLIPSIS_TEST_ID, OVERFLOW_TEXT_CONTAINER_ID } from "../__tests__/text-tests-constants";
+import { textOverflowSuite } from "../__tests__/text.interactions";
+import styles from "./Text.stories.module.scss";
+import { Dialog } from "../../index";
 
 export const metaSettings = createStoryMetaSettings({
   component: Text,
@@ -111,13 +113,27 @@ Our Text component support overflow state.
 When the text is too long and the component includes an ellipsis flag, we will cut the end of the heading and display instead of it "...".
 
 <Canvas>
-  <Story name="Overflow">
-    <Flex direction={Flex.directions.COLUMN} gap={Flex.gaps.MEDIUM} align={Flex.align.STRETCH} style={{ width: "70%" }}>
+  <Story name="Overflow" play={textOverflowSuite}>
+    <Flex
+      id={OVERFLOW_TEXT_CONTAINER_ID}
+      direction={Flex.directions.COLUMN}
+      gap={Flex.gaps.MEDIUM}
+      align={Flex.align.STRETCH}
+      style={{ width: "70%" }}
+    >
       <Text size={Text.sizes.SMALL} ellipsis={false}>
         Text without overflow text without overflow text without overflow text without overflow text without overflow
         text without overflow text without overflow
       </Text>
-      <Text size={Text.sizes.SMALL} ellipsis>
+      <Text
+        size={Text.sizes.SMALL}
+        ellipsis
+        data-testid={ONE_LINE_ELLIPSIS_TEST_ID}
+        /**for testing purposes**/
+        tooltipProps={{
+          containerSelector: `#${OVERFLOW_TEXT_CONTAINER_ID}`
+        }}
+      >
         Text with overflow text with overflow text with overflow text with overflow text with overflow text with
         overflow text with overflow text with overflow text with overflow text with overflow
       </Text>
