add docs best practices to contribution md

--- a/src/components/Loader/__stories__/Loader.stories.mdx
+++ b/src/components/Loader/__stories__/Loader.stories.mdx
@@ -92,17 +92,17 @@ Circular loader indicates to user waiting state.
           <Loader size={Loader.sizes.XS} />
         </div>
       </StoryDescription>
-      <StoryDescription description="S" vertical align={Flex.align.START}>
+      <StoryDescription description="Small" vertical align={Flex.align.START}>
         <div className="monday-storybook-loader_size-variants_container">
           <Loader size={Loader.sizes.SMALL} />
         </div>
       </StoryDescription>
-      <StoryDescription description="M" vertical align={Flex.align.START}>
+      <StoryDescription description="Medium" vertical align={Flex.align.START}>
         <div className="monday-storybook-loader_size-variants_container">
           <Loader size={Loader.sizes.MEDIUM} />
         </div>
       </StoryDescription>
-      <StoryDescription description="L" vertical align={Flex.align.START}>
+      <StoryDescription description="Large" vertical align={Flex.align.START}>
         <div className="monday-storybook-loader_size-variants_container">
           <Loader size={Loader.sizes.LARGE} />
         </div>
