--- a/src/components/Text/__stories__/Text.stories.mdx
+++ b/src/components/Text/__stories__/Text.stories.mdx
@@ -67,16 +67,16 @@ The text component serves as a wrapper for applying typography styles to the tex
       justify={Flex.justify.START}
       align={Flex.align.START}
     >
-      <Text size={Text.sizes.MEDIUM} weight={Text.weights.BOLD}>
+      <Text size="medium" weight="bold">
         Bold medium size
       </Text>
-      <Text size={Text.sizes.MEDIUM} weight={Text.weights.NORMAL}>
+      <Text size="medium" weight="normal">
         Normal medium size
       </Text>
-      <Text size={Text.sizes.SMALL} weight={Text.weights.BOLD}>
+      <Text size="small" weight="bold">
         Bold small size
       </Text>
-      <Text size={Text.sizes.SMALL} weight={Text.weights.NORMAL}>
+      <Text size="small" weight="normal">
         Normal small size
       </Text>
     </Flex>
@@ -88,17 +88,12 @@ The text component serves as a wrapper for applying typography styles to the tex
 <Canvas>
   <Story name="Colors">
     <Flex direction={Flex.directions.COLUMN} align={Flex.align.START} gap={Flex.gaps.SMALL}>
-      <Text color={Text.colors.PRIMARY}>Primary text</Text>
-      <Text color={Text.colors.SECONDARY}>Secondary text</Text>
-      <Text element="div" className={styles.primaryBackground} align={Text.align.CENTER} color={Text.colors.ON_PRIMARY}>
+      <Text color="primary">Primary text</Text>
+      <Text color="secondary">Secondary text</Text>
+      <Text element="div" className={styles.primaryBackground} align="center" color="onPrimary">
         On primary text
       </Text>
-      <Text
-        element="div"
-        className={styles.invertedBackground}
-        align={Text.align.CENTER}
-        color={Text.colors.ON_INVERTED}
-      >
+      <Text element="div" className={styles.invertedBackground} align="center" color="onInverted">
         On inverted text
       </Text>
     </Flex>
@@ -113,16 +108,16 @@ When the text is too long and the component includes an ellipsis flag, we will c
 <Canvas>
   <Story name="Overflow">
     <Flex direction={Flex.directions.COLUMN} gap={Flex.gaps.MEDIUM} align={Flex.align.STRETCH} style={{ width: "70%" }}>
-      <Text size={Text.sizes.SMALL} ellipsis={false}>
+      <Text size="small" ellipsis={false}>
         Text without overflow text without overflow text without overflow text without overflow text without overflow
         text without overflow text without overflow
       </Text>
-      <Text size={Text.sizes.SMALL} ellipsis>
+      <Text size="small" ellipsis>
         Text with overflow text with overflow text with overflow text with overflow text with overflow text with
         overflow text with overflow text with overflow text with overflow text with overflow
       </Text>
       <div>
-        <Text size={Text.sizes.SMALL} ellipsis withoutTooltip maxLines={2}>
+        <Text size="small" ellipsis withoutTooltip maxLines={2}>
           Text with overflow without tooltip text with overflow without tooltip text with overflow without tooltip text
           with overflow without tooltip text with overflow without tooltip text with overflow without tooltip text with
           overflow without tooltip text with overflow without tooltip text with overflow without tooltip text with
