docs(MultiStepIndicator): fit component story to typescript

--- a/src/components/MultiStepIndicator/__stories__/multiStepIndicator.stories.mdx
+++ b/src/components/MultiStepIndicator/__stories__/multiStepIndicator.stories.mdx
@@ -5,7 +5,7 @@ import { STEP_STATUSES } from "../MultiStepConstants";
 import { createComponentTemplate } from "../../../storybook/functions/createComponentTemplate";
 import { StoryDescription } from "../../../storybook/components/story-description/story-description";
 import { BREADCRUBMS, STEPPER, TABS } from "../../../storybook/components/related-components/component-description-map";
-import { firstSteps, secondSteps, thirdSteps } from "./helper.js";
+import { firstSteps, secondSteps, thirdSteps } from "./helper";
 import { Link } from "../../../storybook/components";
 import { Featured } from "../../Icon/Icons";
 import Flex from "../../Flex/Flex";
