--- a/src/storybook/stand-alone-documentaion/typography-new/typography.stories.mdx
+++ b/src/storybook/stand-alone-documentaion/typography-new/typography.stories.mdx
@@ -1,16 +1,19 @@
 import { Meta } from "@storybook/addon-docs";
 import { ComponentName, Frame, Link, RelatedComponents } from "../../components";
-import { TextStyles } from "./text-styles/text-styles";
 import { TextColors } from "../../components/text-colors/text-colors";
+import { TextStyles } from "./text-styles/text-styles";
 import { COLORS, SHADOW, SPACING } from "../../components/related-components/component-description-map";
 import { typographyExample1, typographyExample2 } from "./assets";
+import { AlphaWarning } from "../../components/alpha-warning/alpha-warning";
 import "./typography.scss";
 
-<Meta title="Foundations/Typography tokens" />
+<Meta title="Foundations/Typography" />
 
 <!--- Component documentation -->
 
 <ComponentName withFoundationBackground>Typography</ComponentName>
+
+<AlphaWarning />
 
 - [Overview](#overview)
 - [Text styles](#text-styles)
