--- a/src/components/AvatarGroup/__stories__/AvatarGroup.stories.mdx
+++ b/src/components/AvatarGroup/__stories__/AvatarGroup.stories.mdx
@@ -23,16 +23,16 @@ return (
   <AvatarGroup size={Avatar.sizes.LARGE} max={3} {...args}>
     <Avatar type={Avatar.types.IMG} src={persons.person1} ariaLabel="Hadas Fahri" />
     <Avatar type={Avatar.types.IMG} src={persons.person2} ariaLabel="Sergey Roytman" />
-    <Avatar type={Avatar.types.IMG} src={persons.person3} ariaLabel="Yonatan Lev Ari" />
+    <Avatar type={Avatar.types.IMG} src={persons.person3} ariaLabel="Yossi Saadi" />
     <Avatar type={Avatar.types.IMG} src={persons.person1} ariaLabel="Hadas Fahri" />
     <Avatar type={Avatar.types.IMG} src={persons.person2} ariaLabel="Sergey Roytman" />
-    <Avatar type={Avatar.types.IMG} src={persons.person3} ariaLabel="Yonatan Lev Ari" />
+    <Avatar type={Avatar.types.IMG} src={persons.person3} ariaLabel="Yossi Saadi" />
     <Avatar type={Avatar.types.IMG} src={persons.person1} ariaLabel="Hadas Fahri" />
     <Avatar type={Avatar.types.IMG} src={persons.person2} ariaLabel="Sergey Roytman" />
-    <Avatar type={Avatar.types.IMG} src={persons.person3} ariaLabel="Yonatan Lev Ari" />
+    <Avatar type={Avatar.types.IMG} src={persons.person3} ariaLabel="Yossi Saadi" />
     <Avatar type={Avatar.types.IMG} src={persons.person1} ariaLabel="Hadas Fahri" />
     <Avatar type={Avatar.types.IMG} src={persons.person2} ariaLabel="Sergey Roytman" />
-    <Avatar type={Avatar.types.IMG} src={persons.person3} ariaLabel="Yonatan Lev Ari" />
+    <Avatar type={Avatar.types.IMG} src={persons.person3} ariaLabel="Yossi Saadi" />
     <Avatar type={Avatar.types.TEXT} text="MR" ariaLabel="Mark Roytstein" />
   </AvatarGroup>
 );}
@@ -107,30 +107,30 @@ As an avatar, avatar groups appear in 3 sizes: Small, Medium, and Large.
         <AvatarGroup size={Avatar.sizes.LARGE} type={Avatar.types.IMG} max={3}>
           <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
           <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
-          <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+          <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yossi Saadi" />
           <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
           <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
-          <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+          <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yossi Saadi" />
         </AvatarGroup>
       </StoryDescription>
       <StoryDescription description="Medium" vertical align={Flex.align.START}>
         <AvatarGroup size={Avatar.sizes.MEDIUM} type={Avatar.types.IMG} max={3}>
           <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
           <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
-          <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+          <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yossi Saadi" />
           <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
           <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
-          <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+          <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yossi Saadi" />
         </AvatarGroup>
       </StoryDescription>
       <StoryDescription description="Small" vertical align={Flex.align.START}>
         <AvatarGroup size={Avatar.sizes.SMALL} type={Avatar.types.IMG} max={3}>
           <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
           <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
-          <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+          <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yossi Saadi" />
           <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
           <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
-          <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+          <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yossi Saadi" />
         </AvatarGroup>
       </StoryDescription>
     </Flex>
@@ -153,10 +153,10 @@ You can use Light or Dark counter color to maintain visual hierarchy.
         >
           <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
           <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
-          <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+          <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yossi Saadi" />
           <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
           <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
-          <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+          <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yossi Saadi" />
         </AvatarGroup>
       </StoryDescription>
       <StoryDescription description="Dark" vertical align={Flex.align.START}>
@@ -168,10 +168,10 @@ You can use Light or Dark counter color to maintain visual hierarchy.
         >
           <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
           <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
-          <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+          <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yossi Saadi" />
           <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
           <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
-          <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+          <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yossi Saadi" />
         </AvatarGroup>
       </StoryDescription>
     </Flex>
@@ -192,7 +192,7 @@ You can pass `counterProps` to specify counter params.
     >
       <Avatar src={person1} ariaLabel="Hadas Fahri" />
       <Avatar src={person2} ariaLabel="Sergey Roytman" />
-      <Avatar src={person3} ariaLabel="Yonatan Lev Ari" />
+      <Avatar src={person3} ariaLabel="Yossi Saadi" />
     </AvatarGroup>
   </Story>
 </Canvas>
@@ -254,19 +254,19 @@ Choose the maximum amount of avatars you want to display.
           <AvatarGroup size={Avatar.sizes.LARGE} max={max}>
             <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
             <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
-            <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+            <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yossi Saadi" />
             <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
             <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
-            <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+            <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yossi Saadi" />
             <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
             <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
-            <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+            <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yossi Saadi" />
             <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
             <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
-            <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+            <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yossi Saadi" />
             <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
             <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
-            <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+            <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yossi Saadi" />
             <Avatar text="MR" type={Avatar.types.TEXT} ariaLabel="Mark Roytstein" />
           </AvatarGroup>
         </Flex>
@@ -290,7 +290,7 @@ Otherwise, avatars will be displayed in a Tooltip with no item's navigation.
       const avatarsProps = [
         { type: Avatar.types.IMG, src: person1, ariaLabel: "Hadas Fahri" },
         { type: Avatar.types.IMG, src: person2, ariaLabel: "Sergey Roytman" },
-        { type: Avatar.types.IMG, src: person3, ariaLabel: "Yonatan Lev Ari" }
+        { type: Avatar.types.IMG, src: person3, ariaLabel: "Yossi Saadi" }
       ];
       const getDummyAvatarsProps = useCallback(multiplier => {
         let result = [];
@@ -338,7 +338,7 @@ Should be used only to display large amount of avatars in default counter toolti
       const avatars = [
         <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />,
         <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />,
-        <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+        <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yossi Saadi" />
       ];
       const getDummyAvatars = multiplier => {
         let result = [];
@@ -370,10 +370,10 @@ Counter tooltip props can be specified in order to render tooltip with custom co
     >
       <Avatar src={person1} ariaLabel="Hadas Fahri" />
       <Avatar src={person2} ariaLabel="Sergey Roytman" />
-      <Avatar src={person3} ariaLabel="Yonatan Lev Ari" />
+      <Avatar src={person3} ariaLabel="Yossi Saadi" />
       <Avatar src={person1} ariaLabel="Hadas Fahri" />
       <Avatar src={person2} ariaLabel="Sergey Roytman" />
-      <Avatar src={person3} ariaLabel="Yonatan Lev Ari" />
+      <Avatar src={person3} ariaLabel="Yossi Saadi" />
     </AvatarGroup>
   </Story>
 </Canvas>
@@ -389,10 +389,10 @@ Counter tooltip props can be specified in order to render tooltip with custom co
       <AvatarGroup size={Avatar.sizes.MEDIUM} max={3}>
         <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
         <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
-        <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+        <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yossi Saadi" />
         <Avatar type={Avatar.types.IMG} src={person1} ariaLabel="Hadas Fahri" />
         <Avatar type={Avatar.types.IMG} src={person2} ariaLabel="Sergey Roytman" />
-        <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yonatan Lev Ari" />
+        <Avatar type={Avatar.types.IMG} src={person3} ariaLabel="Yossi Saadi" />
       </AvatarGroup>
     </Flex>
   </Story>
