--- a/src/components/Text/__stories__/Text.stories.mdx
+++ b/src/components/Text/__stories__/Text.stories.mdx
@@ -143,6 +143,34 @@ When the text is too long and the component includes an ellipsis flag, we will c
   </Story>
 </Canvas>
 
+### Paragraph
+
+To use the Text component for a paragraph, utilize the 'paragraph' prop.
+This changes the text wrapper element to p, enabling the creation of paragraph-style text without ellipsis by default.
+The paragraph will receive default top and bottom margins based on browser settings for p elements.
+Customize ellipsis behavior using the "ellipsis" prop or override default margins with a custom class name.
+
+<Canvas>
+  <Story name="Paragraph">
+    <Flex direction={Flex.directions.COLUMN}>
+      <Text paragraph>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+        laborum.
+      </Text>
+      <Text paragraph ellipsis maxLines={3}>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+        laborum.
+      </Text>
+    </Flex>
+  </Story>
+</Canvas>
+
 ### Links inside running text
 
 We distinguish between two types of links: links within running text and links that are not part of the textual flow, such as those found in menus or next to buttons.
@@ -159,5 +187,3 @@ Otherwise, use this Text component with a link skin, as demonstrated in the foll
 </Canvas>
 
 ## Related components
-
-<RelatedComponents componentsNames={[]} />
